sponsors: fix grid wrapping

--- a/app/sponsors/sponsors.module.css
+++ b/app/sponsors/sponsors.module.css
@@ -157,7 +157,7 @@
   /* justify-content: space-between; */
   width: 100%;
   /* grid-template-columns: repeat(3, 1fr); */
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
   --gap: 4%;
   gap: var(--gap);
 }
